# DuckHunt

./: .flake8  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci-cd.yml
docs/: Activity Diagram Update .drawio  Class Diagram.drawio  Use Case Diagram.drawio
game/: driver.py  duck.py  gun.py  registry.py  settings.py  sounds.py  states.py
src/duckhunt/: app.py  driver.py  duck.py  gun.py  registry.py  settings.py  sounds.py  states.py
src/duckhunt/core/: driver.py  settings.py  states.py
src/duckhunt/entities/: duck.py  gun.py
src/duckhunt/utils/: registry.py  sounds.py
tests/: conftest.py  test_duck.py  test_gun.py  test_registry.py  test_score.py  test_states.py
