[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duckhunt"
version = "0.1.0"
description = "Duck Hunt Game with CI/CD"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
    "pytest",
    "pytest-mock",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]