[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duckhunt"
version = "0.1.0"
description = "Duck Hunt Game"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
    "pytest",
    "pytest-html",
    "pytest-mock",
    "flake8",
    "flake8-html"
]

[tool.setuptools.packages.find]
where = ["src"]